--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,4 +11,13 @@
   <div class="animate-switch" data-ng-switch-when="preferences">
     <div data-ng-include="'views/preferences.html'"></div>
   </div>
+  <div class="animate-switch" data-ng-switch-when="login">
+    <div data-ng-include="'views/login.html'"></div>
+  </div>
+  <div class="animate-switch" data-ng-switch-when="user-profile">
+    <div data-ng-include="'views/user-profile.html'"></div>
+  </div>
+  <div class="animate-switch" data-ng-switch-when="contact-data">
+    <div data-ng-include="'views/contact-data.html'"></div>
+  </div>
 </div>
