--- a/app/views/state-detail.html
+++ b/app/views/state-detail.html
@@ -25,6 +25,6 @@
 		<div class="nav-ico home-ico"></div>
 		<div class="nav-ico badge-ico"></div>
 		<div class="nav-ico favourite-ico"></div>
-		<div class="nav-ico user-ico"></div>
+		<div class="nav-ico user-ico" data-ng-click="goTo('user-profile')"></div>
 	</div>
 </div>
