--- a/app/views/recents.html
+++ b/app/views/recents.html
@@ -18,7 +18,7 @@
 		<div class="nav-ico home-ico"></div>
 		<div class="nav-ico badge-ico"></div>
 		<div class="nav-ico favourite-ico"></div>
-		<div class="nav-ico user-ico"></div>
+		<div class="nav-ico user-ico" data-ng-click="goTo('user-profile')"></div>
 	</div>
 </div>
 <!--div data-ng-switch on="stateSelected">
