--- a/app/views/estate-detail.html
+++ b/app/views/estate-detail.html
@@ -103,7 +103,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="rent-button">Rentar</div>
+			<div class="rent-button" data-ng-click="goTo('user-profile')">Rentar</div>
 		</div>
 	</div>
 </div>
