--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="row">
 			<div class="main-logo">
-				<img src="/images/login/main-logo.png" alt="">
+				<img src="/images/login/EM_logotipo.svg" alt="">
 			</div>
 			<div class="login-form">
 				<form class="form-inline">
