--- a/app/views/user-profile.html
+++ b/app/views/user-profile.html
@@ -17,7 +17,7 @@
 			<div class="share">
 				<p class="share-links"><span>Ayuda App &nbsp;&nbsp;&nbsp;|</span><span>&nbsp;&nbsp;&nbsp;&nbsp;Comparte la App</span></p>
 			</div>
-			<button class="btn btn-default close-session" data-ng-click="goto('login')"><div class="user-ico"></div>Cerrar sesión</button>
+			<button class="btn btn-default close-session" data-ng-click="goTo('login')"><div class="user-ico"></div>Cerrar sesión</button>
 			<div class="terms">
 				<span>Términos y condiciones |</span><span>Políticas de privacidad</span><br><span>San Jorge Construcciones S. A. de C. V.</span>
 			</div>
