registro de usuario

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,4 +20,7 @@
   <div class="animate-switch" data-ng-switch-when="contact-data">
     <div data-ng-include="'views/contact-data.html'"></div>
   </div>
+    <div class="animate-switch" data-ng-switch-when="create-account">
+    <div data-ng-include="'views/create-account.html'"></div>
+  </div>
 </div>
