--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -996,7 +996,7 @@ body {
     -webkit-mask-image: url(/images/icos/Ico_Tarjeta.svg)
 }
 
-.user-profile-view, .contact-data-view, .login-view{
+.user-profile-view, .contact-data-view, .login-view, .create-account-view{
   background: url(/images/login/login-bckgnd.jpg) 100% 100%;
 }
 
@@ -1205,4 +1205,58 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+}
+
+.create-account-view .lock-ico{
+  z-index: 9999;
+  position: absolute;
+    top: 0px;
+    left: 0px;
+    float: left;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    mask-size: 145%;
+    -webkit-mask-size: 200%;
+    mask-position: -10px -18px;
+    -webkit-mask-position: -16px -14px;
+    mask-image: url(/images/icos/Ico_Candado.svg);
+    -webkit-mask-image: url(/images/icos/Ico_Candado.svg)
+}
+
+.create-account-view .data-info{
+  font-weight: bold;
+  padding-top: 7px
+}
+
+.white-text{
+  color:white;
+}
+
+.social-nw-btn.facebook{
+    width: 38%;
+    border: 1px solid #3b5998;
+    display: block;
+    float: left;
+    height: 50px;
+    background: none;
+    border-radius: 50px;
+    color: #3b5998;
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 35px;
+}
+
+.social-nw-btn.twitter{
+    width: 38%;
+    border: 1px solid #007cba;
+    display: block;
+    float: left;
+    height: 50px;
+    background: none;
+    border-radius: 50px;
+    color: #007cba;
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 10px;
 }
