pantallas de destacados y mi selección

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,4 +23,10 @@
     <div class="animate-switch" data-ng-switch-when="create-account">
     <div data-ng-include="'views/create-account.html'"></div>
   </div>
+  <div class="animate-switch" data-ng-switch-when="selection">
+    <div data-ng-include="'views/selection.html'"></div>
+  </div>
+  <div class="animate-switch" data-ng-switch-when="destacados">
+    <div data-ng-include="'views/destacados.html'"></div>
+  </div>
 </div>
