--- a/app/views/destacados.html
+++ b/app/views/destacados.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="list-header">
 				<div class="back-ico" data-ng-click="goTo('statesList')"></div>
-				<h1 class="pull-left detail-title">{{selectedState.name}}</h1>
+				<h1 class="pull-left detail-title">Destacados</h1>
 				<div class="pref-ico pull-right" data-ng-click="goTo('preferences')"></div>
 			</div>
 		</div>
