--- a/app/views/recents.html
+++ b/app/views/recents.html
@@ -15,9 +15,9 @@
 		</div>
 	</div>
 	<div class="bottom-nav">
-		<div class="nav-ico home-ico"></div>
-		<div class="nav-ico badge-ico"></div>
-		<div class="nav-ico favourite-ico"></div>
+		<div class="nav-ico home-ico" data-ng-click="goTo('statesList')"></div>
+		<div class="nav-ico badge-ico" data-ng-click="destacadosHome()"></div>
+		<div class="nav-ico favourite-ico" data-ng-click="selectionHome()"></div>
 		<div class="nav-ico user-ico" data-ng-click="goTo('user-profile')"></div>
 	</div>
 </div>
