--- a/app/views/selection.html
+++ b/app/views/selection.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div class="bottom-nav">
-		<div class="nav-ico home-ico" data-ng-click="goTo('stateDetail')"></div>
+		<div class="nav-ico home-ico" data-ng-click="goTo('statesList')"></div>
 		<div class="nav-ico badge-ico" data-ng-click="goTo('destacados')"></div>
 		<div class="nav-ico favourite-ico" data-ng-click="goTo('selection')"></div>
 		<div class="nav-ico user-ico" data-ng-click="goTo('user-profile')"></div>
